Completed name searcher, it works but the UI is incomplete.

--- a/NameSearcher/NameSearcher.csproj
+++ b/NameSearcher/NameSearcher.csproj
@@ -226,6 +226,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\angular-route.js" />
     <Content Include="Scripts\Angular.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
